[tool.poetry]
name = "flux"
version = "0.1.0"
description = "Test bot for the wyvern libary."
authors = ["Sarthak <shiva02939@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
wyvern = {git = "https://github.com/sarthhh/wyvern.git"}
aiosqlite = "^0.18.0"
python-dotenv = "^0.21.0"
flask = "^2.2.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.193"
isort = "^5.11.4"
black = "^22.12.0"

[tool.ruff]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
